# kaipom

./: README.md  kp.py  main.py  pyproject.toml  timer.py
kaipom/: cli.py  kp.py  quote.py  test_project.py
notes/: 09-May-2026-13:01.json  09-May-2026-14:45.json  10-May-2026-09:59.json  10-May-2026-10:52.json  10-May-2026-20:53.json  11-May-2026-11:09.json  11-May-2026-19:54.json  11-May-2026-21:28.json  12-May-2026-07:29.json  13-May-2026-05:11.json  13-May-2026-08:46.json  13-May-2026-14:30.json  13-May-2026-19:24.json  13-May-2026-20:53.json  13-May-2026-21:26.json  15-May-2026-09:25.json  15-May-2026-10:21.json
